updated information (JJ)

--- a/index.html
+++ b/index.html
@@ -60,10 +60,11 @@
                         </div>
                         
                         <p>
-                        CrossJoin Consulting was founded by Brian and JJ to give them a voice in the mobile development and web application world.  We also can create custom solutions (web, web application, mobile applications) to our customers, just contact us to find out more.  
-                        <br /><br />
-                        You will be hearing about two of our initial products in our blog section, both of them will be a way to help organize, store and retrieve data.  There is nothing like it today in the market place, which makes us excited to deliver a prototype in the very near future.
-                        <br /><br />
+                        CrossJoin Consulting was founded by Brian and Jeremiah to give them a voice in the mobile development and web application world.  CrossJoin Consulting can create custom solutions (web sites, web hosting, web application, and mobile applications) for our customers, just contact us to find out more.  
+                        <br /><br />CrossJoin Consulting also has experience with Project & Program management.  If you want to discuss your current situation, look for advice or share your stories, contact Us!
+                        
+ <br /><br />There will be some 
+                        sample applications shared with the community in the near future.<br /><br />
                         You can reach us via email <a href="mailto:contactus@crossjoinconsulting.com">contactus@crossjoinconsulting.com</a>
                         </p>
                         <br />                      
@@ -89,9 +90,10 @@
                         <script type="IN/MemberProfile" data-id="http://www.linkedin.com/in/jjenkins70" data-format="click" data-text="" data-related="false"></script>
                         <a href="https://www.facebook.com/jjenkins70" target="_blank"><img alt="Facebook" src="img/f_logo.jpg" width="20" /></a> 
                         <a href="https://twitter.com/sprguru70" class="twitter-follow-button" data-show-count="false">Follow &nbsp;</a><br />
-                        Jeremiah has 12 years of experience managing and developing applications. Several projects that he has managed have brought in over $100M for his companies.
-                        Jeremiah graduated from University of Phoenix with both his Bachelor's degree in Management and an MBA. 
-                        He is also a PMP and is married with two children.<br />
+                        Jeremiah has 12 years of experience in the technical space with a background that covers OS, networking, database, web and application support and design.
+                        As a project leader Jeremiah had led diverse teams spread throughout the US and abroad.  
+                        Jeremiah graduated from  Lord Fairfax Community College with an Associates Degree in Computer Science.  Jeremiah later graduated from the University of Phoenix with both his Bachelor's degree in Business  and a MBA. 
+                        He is also a PMP and is married with two children and enjoys golfing when time and the weather allow.<br />
                     </div> 
                 </div>
                 <div class="article" id="Contact">
